ec2.tf

###Ec2 Instance
resource "aws_instance" "example" {
  ami           = var.ami_id
  instance_type = var.instance_type
  tags = var.tags
}
